--- a/src/components/common/Common.css
+++ b/src/components/common/Common.css
@@ -32,13 +32,21 @@
 	width: 100%;
 	height: 100%;
 	background: #EEEEEE;
-	position: fixed;
+	position: absolute;
 	display:flex;
 	flex-direction: column;
 }
 .rubrik {
 	margin-top: 10%;
 	font-size: 54px;
+  	align-self: center;
+  	flex:0 1;
+  	opacity: 0.74;
+
+}
+.underRubrik {
+	
+	font-size: 24px;
   	align-self: center;
   	flex:0 1;
   	opacity: 0.74;
@@ -66,4 +74,74 @@
 	display: flex;
 	flex-direction: column;
 	justify-content: flex-start;
+}
+.selectStyle {
+	align-self: center;
+	width: 300%;
+	margin-top: 50px;
+
+}
+
+.greyHeader {
+	background: #E6E6E6;
+	width:100%;
+	height: 10%;
+	position: absolute;
+	display: flex;
+	border:solid #979797 0.5px;
+	flex:3;
+	margin-top: -18px;
+
+}
+
+.title {
+	width: 100%;
+	text-align: center;
+	opacity: 0.8;
+}
+.subject {
+	justify-content: flex-start;
+	margin-left: 12%;
+	opacity: 0.8;
+}
+.sidebar {
+	background: #1DA1F2;
+	width:10%;
+	height: 100%;
+	position: fixed;
+	display: flex;
+	flex-direction: column;
+	justify-content: space-between;
+	text-align: center;
+	flex:1;
+	z-index: 100;
+	box-shadow: 0px 0px 11px #888888;
+	color: white;
+}
+.sidebarContainer {
+	height: 55%;
+	display: flex;
+	flex-direction: column;
+	justify-content: space-between;
+	font-size: 16px;
+}
+.informationBoxContainer {
+    display: flex;
+    flex-direction: row;
+    width: 80%;
+    height: 100%;
+    left: 15%;
+    right: 5%;
+    top: 13%;
+    position: absolute;
+    -ms-flex-pack: start;
+    justify-content: flex-start;
+    flex-wrap: wrap;
+}
+.informationBox {
+	height: 300px;
+    width: 300px;
+    background: red;
+    margin: 15px;
+    box-shadow: 0px 0px 12px #888888;
 }
