--- a/src/components/common/Common.css
+++ b/src/components/common/Common.css
@@ -1,6 +1,6 @@
 .button {
 	background: #1DA1F2;
-	box-shadow: 0 2px 4px 0 black;
+	box-shadow: 0 2px 12px 0 #888888;
 	border-radius: 22px;
 	border-color: #1DA1F2;
     width: 403px;
@@ -10,7 +10,11 @@
     color: white;
 }
 .button:hover { 
-    background-color: yellow;
+    background-color: #259BE4;
+    cursor: pointer;
+}
+.buttonText {
+	padding-top: 10px;
 }
 .flexContainer {
 	flex:1;
@@ -144,4 +148,21 @@
     background: red;
     margin: 15px;
     box-shadow: 0px 0px 12px #888888;
+    transition: all .2s ease-in-out;
+}
+.informationBox:hover {
+	transform: scale(1.1);
+}
+.informationBoxText {
+	text-align: center;
+	margin-top: 125px;
+}
+
+.errorRubrik {
+	margin-top: 17%;
+	font-size: 254px;
+  	align-self: center;
+  	flex:0 1;
+  	opacity: 0.74;
+
 }
